// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-1q5v645-StyledButton-item-borderless-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  border: 0;
}

.cache-1q5v645-StyledButton-item-borderless-Item:hover,
.cache-1q5v645-StyledButton-item-borderless-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1q5v645-StyledButton-item-borderless-Item:hover,
.cache-1q5v645-StyledButton-item-borderless-Item:focus {
  color: #390171;
}

.cache-1q5v645-StyledButton-item-borderless-Item:hover svg,
.cache-1q5v645-StyledButton-item-borderless-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1q5v645-StyledButton-item-borderless-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1q5v645-StyledButton-item-borderless-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Borderless Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Default Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-b0j5iu-StyledButton-item-disabled-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus {
  color: #390171;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover svg,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus {
  color: #4a4f62;
  background-color: #ffffff;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover svg,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus svg {
  fill: #4a4f62;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-b0j5iu-StyledButton-item-disabled-Item"
    disabled=""
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Disabled Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant danger 1`] = `
<DocumentFragment>
  .cache-1j6j4sq-StyledButton-item-danger-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  color: #a6102d;
}

.cache-1j6j4sq-StyledButton-item-danger-Item:hover,
.cache-1j6j4sq-StyledButton-item-danger-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1j6j4sq-StyledButton-item-danger-Item:hover,
.cache-1j6j4sq-StyledButton-item-danger-Item:focus {
  color: #390171;
}

.cache-1j6j4sq-StyledButton-item-danger-Item:hover svg,
.cache-1j6j4sq-StyledButton-item-danger-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1j6j4sq-StyledButton-item-danger-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1j6j4sq-StyledButton-item-danger-Item:hover,
.cache-1j6j4sq-StyledButton-item-danger-Item:focus {
  color: #a6102d;
}

.cache-1j6j4sq-StyledButton-item-danger-Item:hover svg,
.cache-1j6j4sq-StyledButton-item-danger-Item:focus svg {
  fill: #a6102d;
}

.cache-1j6j4sq-StyledButton-item-danger-Item svg {
  fill: #a6102d;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1j6j4sq-StyledButton-item-danger-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Danger
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant nav 1`] = `
<DocumentFragment>
  .cache-m1xbvb-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-m1xbvb-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-m1xbvb-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-m1xbvb-StyledLink:hover,
.cache-m1xbvb-StyledLink:focus {
  gap: 4px;
  outline: none;
}

.cache-m1xbvb-StyledLink:hover::after,
.cache-m1xbvb-StyledLink:focus::after {
  background-color: #390171;
}

.cache-m1xbvb-StyledLink:active::after {
  height: 2px;
}

.cache-m1xbvb-StyledLink[aria-disabled='true'] {
  pointer-events: none;
  color: #bda5df;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="cache-m1xbvb-StyledLink e4bq1r50"
    href="/test"
  >
    <span>
      <span
        class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          Nav
        </div>
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="bottom"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          bottom
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:after,
.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:after {
  border-color: transparent;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:before {
  border-color: transparent;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:after {
  margin-left: -9px;
  right: 24px;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:before {
  margin-left: -11px;
  right: 24px;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:after,
.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:before {
  bottom: 100%;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:after {
  border-bottom-color: #ffffff;
}

.cache-638teq-MenuList-endStyles-bottomStyles-bottom-end:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="bottom-end"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-638teq-MenuList-endStyles-bottomStyles-bottom-end epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          bottom-end
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:after,
.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:after {
  border-color: transparent;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:before {
  border-color: transparent;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:after {
  margin-right: -9px;
  left: 24px;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:before {
  margin-right: -11px;
  left: 24px;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:after,
.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:before {
  bottom: 100%;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:after {
  border-bottom-color: #ffffff;
}

.cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="bottom-start"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1clvsmy-MenuList-startStyles-bottomStyles-bottom-start epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          bottom-start
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-197or1v-MenuList-centerStyles-topStyles-top {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-197or1v-MenuList-centerStyles-topStyles-top:after,
.cache-197or1v-MenuList-centerStyles-topStyles-top:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-197or1v-MenuList-centerStyles-topStyles-top:after {
  border-color: transparent;
}

.cache-197or1v-MenuList-centerStyles-topStyles-top:before {
  border-color: transparent;
}

.cache-197or1v-MenuList-centerStyles-topStyles-top:after,
.cache-197or1v-MenuList-centerStyles-topStyles-top:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-197or1v-MenuList-centerStyles-topStyles-top:after,
.cache-197or1v-MenuList-centerStyles-topStyles-top:before {
  top: 100%;
}

.cache-197or1v-MenuList-centerStyles-topStyles-top:after {
  border-top-color: #eeeeff;
}

.cache-197or1v-MenuList-centerStyles-topStyles-top:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="top"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-197or1v-MenuList-centerStyles-topStyles-top epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          top
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:after,
.cache-12kicf8-MenuList-endStyles-topStyles-top-end:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:after {
  border-color: transparent;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:before {
  border-color: transparent;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:after {
  margin-left: -9px;
  right: 24px;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:before {
  margin-left: -11px;
  right: 24px;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:after,
.cache-12kicf8-MenuList-endStyles-topStyles-top-end:before {
  top: 100%;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:after {
  border-top-color: #eeeeff;
}

.cache-12kicf8-MenuList-endStyles-topStyles-top-end:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="top-end"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-12kicf8-MenuList-endStyles-topStyles-top-end epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          top-end
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:after,
.cache-slwj23-MenuList-startStyles-topStyles-top-start:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:after {
  border-color: transparent;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:before {
  border-color: transparent;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:after {
  margin-right: -9px;
  left: 24px;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:before {
  margin-right: -11px;
  left: 24px;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:after,
.cache-slwj23-MenuList-startStyles-topStyles-top-start:before {
  top: 100%;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:after {
  border-top-color: #eeeeff;
}

.cache-slwj23-MenuList-startStyles-topStyles-top-start:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="top-start"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-slwj23-MenuList-startStyles-topStyles-top-start epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          top-start
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          Menu.Item
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-b0j5iu-StyledButton-item-disabled-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus {
  color: #390171;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover svg,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus {
  color: #4a4f62;
  background-color: #ffffff;
}

.cache-b0j5iu-StyledButton-item-disabled-Item:hover svg,
.cache-b0j5iu-StyledButton-item-disabled-Item:focus svg {
  fill: #4a4f62;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="menu-1"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="true"
        class="em6gco80 cache-b0j5iu-StyledButton-item-disabled-Item"
        disabled=""
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          Menu.Item disabled
        </div>
      </button>
      <button
        aria-disabled="true"
        class="em6gco80 cache-b0j5iu-StyledButton-item-disabled-Item"
        disabled=""
        role="menuitem"
        to="/link"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          Menu.Item Link disabled
        </div>
      </button>
      <button
        aria-disabled="true"
        class="em6gco80 cache-b0j5iu-StyledButton-item-disabled-Item"
        disabled=""
        href="https://link"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          Menu.Item Link disabled
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-m1xbvb-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-m1xbvb-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-m1xbvb-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-m1xbvb-StyledLink:hover,
.cache-m1xbvb-StyledLink:focus {
  gap: 4px;
  outline: none;
}

.cache-m1xbvb-StyledLink:hover::after,
.cache-m1xbvb-StyledLink:focus::after {
  background-color: #390171;
}

.cache-m1xbvb-StyledLink:active::after {
  height: 2px;
}

.cache-m1xbvb-StyledLink[aria-disabled='true'] {
  pointer-events: none;
  color: #bda5df;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="menu-1"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
      role="menu"
    >
      <a
        aria-disabled="false"
        class="cache-m1xbvb-StyledLink e4bq1r50"
        href="/link"
      >
        <span>
          <span
            class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
          >
            <div
              class="cache-m245rk-StyledContent em6gco81"
            >
              Menu.Item as Link
            </div>
          </span>
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with disclosure not a function 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    hidden=""
    id="menu"
    role="dialog"
    style="display: none; position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  />
</DocumentFragment>
`;

exports[`Menu renders with modal={false} 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-2"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1fbex2w-StyledButton-item-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fbex2w-StyledButton-item-Item:hover,
.cache-1fbex2w-StyledButton-item-Item:focus {
  color: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:hover svg,
.cache-1fbex2w-StyledButton-item-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1fbex2w-StyledButton-item-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    id="menu-2"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1fbex2w-StyledButton-item-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-m245rk-StyledContent em6gco81"
        >
          MenuItem
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    aria-label="Menu"
    class="cache-16wxqto-StyledPopover epli4kt1"
    data-dialog="true"
    hidden=""
    id="menu"
    role="dialog"
    style="display: none; position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  />
</DocumentFragment>
`;
